--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTNoticeDetailVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTNoticeDetailVC.xib
@@ -23,8 +23,8 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QJu-mG-0aR">
                     <rect key="frame" x="12" y="54" width="390" height="788"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="关于BTCK正式上线公告" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TnA-vi-SUE">
-                            <rect key="frame" x="104" y="25" width="182" height="14"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TnA-vi-SUE">
+                            <rect key="frame" x="195" y="25" width="0.0" height="14"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="14" id="D4C-Kt-41Q"/>
                             </constraints>
@@ -32,8 +32,8 @@
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2020-09-11" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z0z-Pv-ugJ">
-                            <rect key="frame" x="166.5" y="59" width="57.5" height="10"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z0z-Pv-ugJ">
+                            <rect key="frame" x="195" y="59" width="0.0" height="10"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="10" id="ZDM-Jg-g96"/>
                             </constraints>
