--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTPayPasswordVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/BTPayPasswordVC.xib
@@ -146,7 +146,7 @@
                         <fragment content="温馨提示：请牢记您的交易密码，如果遗忘将无法回，将无法提现账户资产，请慎重！！！   ">
                             <attributes>
                                 <color key="NSColor" red="0.65490196079999996" green="0.52549019610000003" blue="0.34901960780000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <font key="NSFont" metaFont="cellTitle"/>
+                                <font key="NSFont" metaFont="controlContent"/>
                                 <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineSpacing="8" tighteningFactorForTruncation="0.0"/>
                             </attributes>
                         </fragment>
