--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/BTAssetsViewController.xib
@@ -9,8 +9,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="BTAssetsViewController">
             <connections>
+                <outlet property="headerView" destination="5il-vG-aTH" id="vQK-pC-Upf"/>
                 <outlet property="tableView" destination="mTL-LB-J8e" id="rPx-pD-PFs"/>
                 <outlet property="totalAccount" destination="vwh-z1-4cd" id="I6R-3a-HxG"/>
+                <outlet property="totalHeight" destination="1ID-pN-7eb" id="GUc-9z-XsS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
